# segmetric

./: README.md
evaluation/: evaluation_method.py  requirements.txt  setup.cfg
evaluation/source/: evaluation.py
