[metadata]
name = segmetric
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A package for evaluating video object segmentation metrics.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
# Copy the contents of your requirements.txt file here
install_requires =
    numpy
    Pillow
    opencv-python
    pandas
    scikit-image
    scikit-learn
    tqdm
    scipy

# Add this new section at the end of the file
[options.entry_points]
console_scripts =
    run-seg-eval = segmetric.cli:main

[options.packages.find]
where = .
